--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="../10KCodersNotes.docx">Notes</a>
         <h2>DAY:2</h2>
         </center>
-        <a href="../../REPOSITORY/HtmlTasks/Pre_Tag">Day-2:pre-Formatted_Tag</a>
+        <a href="./Pre_Tag">Day-2:pre-Formatted_Tag</a>
         <center><h2>DAY:3</h2></center>
         <a href="C:\10K_Coders\HTML\Heading_pra_anchor_tags">Day-3:Heading_paragraph_Anchor_Tags</a>
         <br>
