--- a/index.html
+++ b/index.html
@@ -9,76 +9,43 @@
     <body>
         <center>
         <u><h1>Tasks Of Html</h1></u>
-        <h1>Day 1:Introduction about Web Development</h1>
-        <a href="../10KCodersNotes.docx">Notes</a>
-        <h2>DAY:2</h2>
+        <h2>DAY:1</h2>
         </center>
-        <a href="./Pre_Tag">Day-2:pre-Formatted_Tag</a>
+        <a href="./Pre_Tag">Day-1:pre-Formatted_Tag</a>
+        <center><h2>DAY:2</h2></center>
+        <a href="./Heading_pra_anchor_tags">Day-2:Heading_paragraph_Anchor_Tags</a>
+        <br>
+        <br>
+        <a href="./Text_Formatting_Tags">Day-2:Text_Formatting_Tags</a>
         <center><h2>DAY:3</h2></center>
-        <a href="C:\10K_Coders\HTML\Heading_pra_anchor_tags">Day-3:Heading_paragraph_Anchor_Tags</a>
+        <a href="./List_Order_UnOrder">Day-3:List_OrderAndUnOrder_Lists</a>
         <br>
         <br>
-        <a href="C:\10K_Coders\HTML\Text_Formatting_Tags">Day-3:Text_Formatting_Tags</a>
+        <a href="./Table">Day-3:Table_RowSpan_ColSpan</a>
         <center><h2>DAY:4</h2></center>
-        <a href="C:\10K_Coders\HTML\List_Order_UnOrder">Day-4:List_OrderAndUnOrder_Lists</a>
+        <a href="./TotalTasks">Day-4</a>
+        <br>
+        <center><h2>Day:5</h2></center>
+        <a href="./Details_Summary_Tags">Day-5:Netflix</a>
         <br>
         <br>
-        <a href="C:\10K_Coders\HTML\Table">Day-4:Table_RowSpan_ColSpan</a>
-        <center><h2>DAY:5</h2></center>
-        <a href="file:///C:/10K_Coders/HTML/TotalTasks/TotalTasks.html">Day-5</a>
+        <a href="./BookMark_InternalRout">Day-5:Restaurant by internal routing</a>
         <br>
         <center><h2>Day:6</h2></center>
-        <a href="file:///C:/10K_Coders/HTML/Details_Summary_Tags/NetflixWebSeries.html">Day-6:Netflix</a>
+        <a href="./AnchorTag_Attributes">Day-6:Anchor Tag Attributes its values</a>
         <br>
         <br>
-        <a href="file:///C:/10K_Coders/HTML/BookMark_InternalRout/Restaurant.html">Day-6:Restaurant by internal routing</a>
-        <br>
-        <br>
-        <a href="file:///C:/10K_Coders/HTML/BookMark_InternalRout/BookChapters.html">Day-6:Book Chapters By internal routing</a>
-        <br>
+        <a href="./Iframe/YoutubeGooglemap.html">Day-6:iframe</a>
         <center><h2>Day:7</h2></center>
-        <a href="file:///C:/10K_Coders/HTML/AnchorTag_Attributes/AttributesItsValues.html">Day-7:Anchor Tag Attributes its values</a>
-        <br>
-        <br>
-        <a href="file:///C:/10K_Coders/HTML/Iframe/YoutubeGooglemap.html">Day-7:iframe</a>
-        <center><h2>Day:8</h2></center>
-        <a href="C:/10K_Coders/HTML/FormElements/DataList.html">Day-8:datalist</a>
-        <br>
-        <br>
-        <a href="file:///C:/10K_Coders/HTML/FormElements/DropdownList.html">Day-8:dropdownlist</a>
-        <br>
-        <br>
-        <a href="file:///C:/10K_Coders/HTML/FormElements/fieldsetLegend.html">Day-8:fieldset textarea</a>
-        <br>
-        <br>
-        <a href="file:///C:/10K_Coders/HTML/FormElements/InputTypesAndAttributes.html">Day-8:inputtypes&attributes form attributes</a>
-        <br>
-        <br>
-        <a href="file:///C:/10K_Coders/HTML/FormElements/inputbox.html">Day-8:input types</a>
+       <a href="./FieldsetLegendTag/ResumeWithFL.html">Day-7:FieldsetLegend Tag</a>
+       <br>
+       <br>
+       <a href="./MultimediaTags">Day-7:Multimedia Tags</a>
+       <br>
+       <center><h2>Day:8</h2></center>
+       <a href="./HtmlLayOut.html/Layout.html">Day-8:Html Layout Sematic Tags</a>
+       <br>
         <center><h2>Day:9</h2></center>
-        <a href="file:///C:/10K_Coders/HTML/HtmlLayOut.html/Layout.html">Day-9:sematic tags using html layout</a>
-        <br>
-        <br>
-        <a href="file:///C:/10K_Coders/HTML/figuretag/figurefigcaption.html">Day-9:figure tag</a>
-        <br>
-        <br>
-        <a href="file:///C:/10K_Coders/HTML/marqueetag.html/textwithmarquee.html">Day-9:Marquee Tag</a>
-        <br>
-        <br>
-        <a href="file:///C:/10K_Coders/HTML/marqueetag.html/htmlentities.html">Day-9:Html entities</a>
-        <center><h2>Day:10</h2></center>
-        <a href="../Table/CopyThedata.html">Day-10:Table task1</a>
-        <br>
-        <br>
-        <a href="../Table/Categorywithoutrowcol.html">Day-10:Table task2</a>
-        <br>
-        <br>
-        <a href="../MetaTags/MetaTagsAttributes.html">Day-10:Meta Tag Attributes</a>
-        <br>
-        <br>
-        <a href="../favicon/iconintab.html">Day-10:Favicon</a>
-        <br>
-        <br>
-        <a href="../FormElements/inputbox.html">Day-10:Favicons types</a>
+        <a href="./CopyDataInTable">Day-9:Table task</a>      
 </body>
 </html>
