--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <u><h1>Tasks Of Html</h1></u>
         <h2>DAY:1</h2>
         </center>
-        <a href="./Pre_Tag">Day-1:pre-Formatted_Tag</a>
+        <a href="./Pre_Tag/Res1.html">Day-1:pre-Formatted_Tag</a>
         <center><h2>DAY:2</h2></center>
         <a href="./Heading_pra_anchor_tags">Day-2:Heading_paragraph_Anchor_Tags</a>
         <br>
