--- a/FieldsetLegendTag/ResumeWithFL.html
+++ b/FieldsetLegendTag/ResumeWithFL.html
@@ -19,7 +19,7 @@
         <center>
             <h1>RESUME</h1>
             <h1>P.K.V.Sai Priyatham</h1>
-            <img src="../Resume_Using_Html_Tags/pspimage.jpeg" width="100" height="100">
+            <img src="./pspimage.jpeg" width="100" height="100">
             </center>
     <fieldset style="height: 80px;">
         <legend>Career Objective</legend>
@@ -94,7 +94,7 @@
         <h3>Place:Hyderabad</h3>
 <h3>Date:26-03-2024</h3>
 <h3>Name:priyatham</h3>
-<h3>Signature:<img src="../Resume_Using_Html_Tags/pspsignature.jpg" width="200" height="100"></h3>
+<h3>Signature:<img src="./pspsignature.jpg" width="200" height="100"></h3>
     </fieldset>
     </fieldset>
 
