--- a/HtmlLayOut.html/Layout.html
+++ b/HtmlLayOut.html/Layout.html
@@ -9,7 +9,7 @@
     <header>
         <center id="home">
             <h1>Bawarchi Restaurant</h1>
-            <img src="../Bawarchi_Res/Bawarchi.jpeg" width="100%" height="400">
+            <img src="./Bawarchi.jpeg" width="100%" height="400">
         </center>
     </header>
     <nav>
@@ -30,30 +30,30 @@
             <h2>Veg Starters</h2>
             <ul>
             <li>Paneer Tikka</li>
-            <img src="../Bawarchi_Res/PaneerTikka.jpeg" height="200">
+            <img src="./PaneerTikka.jpeg" height="200">
             <li>Mixed Lollipop</li>
-            <img src="../Bawarchi_Res/MixedLollipop.jpeg" height="200">
+            <img src="./MixedLollipop.jpeg" height="200">
             </ul>
             <h2>Non-Veg Starters</h2>
             <ul>
             <li>Chicken Tondoori</li>
-            <img src="../Bawarchi_Res/ChickenTandoori.jpeg" height="200">
+            <img src=".ChickenTandoori.jpeg" height="200">
             <li>Grill Chicken</li>
-            <img src="../Bawarchi_Res/GrillChicken.jpeg" height="200">
+            <img src=".GrillChicken.jpeg" height="200">
             </ul>
             <h2>Veg Biriyani's</h2>
             <ul>
             <li>Paneer Biriyani</li>
-            <img src="../Bawarchi_Res/PaneerBiriyani.jpeg" height="200">
+            <img src=".PaneerBiriyani.jpeg" height="200">
             <li>Mushroom Biriyani</li>
-            <img src="../Bawarchi_Res/Mushroom Biriyani.jpeg" height="200">
+            <img src=".Mushroom Biriyani.jpeg" height="200">
             </ul>
             <h2>Non-Veg Biriyani's</h2>
             <ul>
             <li>Chicken Biriyani</li>
-            <img src="../Bawarchi_Res/ChickenBiriyani.jpeg" height="200">
+            <img src=".ChickenBiriyani.jpeg" height="200">
             <li>Mutton Biriyani</li>
-            <img src="../Bawarchi_Res/MuttonBiriyani.jpeg" height="200">
+            <img src=".MuttonBiriyani.jpeg" height="200">
             </ul>
             </p>
     </section>
