--- a/HtmlLayOut.html/Layout.html
+++ b/HtmlLayOut.html/Layout.html
@@ -37,23 +37,23 @@
             <h2>Non-Veg Starters</h2>
             <ul>
             <li>Chicken Tondoori</li>
-            <img src=".ChickenTandoori.jpeg" height="200">
+            <img src="./ChickenTandoori.jpeg" height="200">
             <li>Grill Chicken</li>
-            <img src=".GrillChicken.jpeg" height="200">
+            <img src="./GrillChicken.jpeg" height="200">
             </ul>
             <h2>Veg Biriyani's</h2>
             <ul>
             <li>Paneer Biriyani</li>
-            <img src=".PaneerBiriyani.jpeg" height="200">
+            <img src="./PaneerBiriyani.jpeg" height="200">
             <li>Mushroom Biriyani</li>
-            <img src=".Mushroom Biriyani.jpeg" height="200">
+            <img src="./Mushroom Biriyani.jpeg" height="200">
             </ul>
             <h2>Non-Veg Biriyani's</h2>
             <ul>
             <li>Chicken Biriyani</li>
-            <img src=".ChickenBiriyani.jpeg" height="200">
+            <img src="./ChickenBiriyani.jpeg" height="200">
             <li>Mutton Biriyani</li>
-            <img src=".MuttonBiriyani.jpeg" height="200">
+            <img src="./MuttonBiriyani.jpeg" height="200">
             </ul>
             </p>
     </section>
