--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="./Heading_pra_anchor_tags">Day-2:Heading_paragraph_Anchor_Tags</a>
         <br>
         <br>
-        <a href="./Text_Formatting_Tags">Day-2:Text_Formatting_Tags</a>
+        <a href="./Text_Formatting_Tags/Bangalore.html">Day-2:Text_Formatting_Tags</a>
         <center><h2>DAY:3</h2></center>
         <a href="./List_Order_UnOrder">Day-3:List_OrderAndUnOrder_Lists</a>
         <br>
