--- a/index.html
+++ b/index.html
@@ -9,27 +9,47 @@
     <body>
         <center>
         <u><h1>Tasks Of Html</h1></u>
-        <h2>DAY:1</h2>
+        <h2>DAY:1-pre-Formatted_Tag</h2>
         </center>
-        <a href="./Pre_Tag/Res1.html">Day-1:pre-Formatted_Tag</a>
-        <center><h2>DAY:2</h2></center>
-        <a href="./Heading_pra_anchor_tags">Day-2:Heading_paragraph_Anchor_Tags</a>
+        <a href="./Pre_Tag/Res1.html">Task1</a>
+        <a href="./Pre_Tag/Res2.html">Task2</a>
+        <a href="./Pre_Tag/Res3.html">Task3</a>
+        <a href="./Pre_Tag/Res4.html">Task4</a>
+        <a href="./Pre_Tag/Res5.html">Task5</a>
+        <center><h2>DAY:2-Heading_paragraph_Anchor_Tags and Text_Formatting_Tags</h2></center>
+        <a href="./Heading_pra_anchor_tags/Bike.html">Task1</a>
+        <a href="./Heading_pra_anchor_tags/Instagram.html">Task2</a>
+        <a href="./Heading_pra_anchor_tags/ipl.html">Task3</a>
+        <a href="./Heading_pra_anchor_tags/kohli.html">Task4</a>
+        <a href="./Heading_pra_anchor_tags/WhatsApp.html">Task5</a>
         <br>
         <br>
-        <a href="./Text_Formatting_Tags/Bangalore.html">Day-2:Text_Formatting_Tags</a>
-        <center><h2>DAY:3</h2></center>
-        <a href="./List_Order_UnOrder">Day-3:List_OrderAndUnOrder_Lists</a>
+        <h2>Text Formatting Tags</h2>
+        <a href="./Text_Formatting_Tags/Bangalore.html">Task1</a>
+        <a href="./Text_Formatting_Tags/Chennai.html">Task2</a>
+        <a href="./Text_Formatting_Tags/hyderabad.html">Task3</a>
+        <a href="./Text_Formatting_Tags/Kolkata.html">Task4</a>
+        <a href="./Text_Formatting_Tags/Mumbai.html">Task5</a>
+        <center><h2>DAY:3-List_OrderAndUnOrder_Lists and Table_RowSpan_ColSpan</h2></center>
+        <a href="./List_Order_UnOrder/orderList.html">Task1</a>
         <br>
         <br>
-        <a href="./Table">Day-3:Table_RowSpan_ColSpan</a>
+        <h2>Table_RowSpan_ColSpan</h2>
+        <a href="./Table/Grociers.html">Task1</a>
+        <a href="./Table/TableForGroceries.html">Task2</a>
+        <a href="./Table/Biriyani.html">Task3</a>
+        <a href="./Table/productsTotal.html">Task4</a>
         <center><h2>DAY:4</h2></center>
-        <a href="./TotalTasks">Day-4</a>
+        <a href="./TotalTasks/TotalTasks.html">Task1</a>
         <br>
-        <center><h2>Day:5</h2></center>
-        <a href="./Details_Summary_Tags">Day-5:Netflix</a>
+        <center><h2>Day:5-Details and Summary Tags and internal routing</h2></center>
+        <a href="./Details_Summary_Tags/NetflixWebSeries.html">task1</a>
         <br>
         <br>
-        <a href="./BookMark_InternalRout">Day-5:Restaurant by internal routing</a>
+        <a href="./BookMark_InternalRout/Restaurant.html">task2 </a>
+        <br>
+        <br>
+        <a href="./BookMark_InternalRout/BookChapters.html">task3 </a>
         <br>
         <center><h2>Day:6</h2></center>
         <a href="./AnchorTag_Attributes">Day-6:Anchor Tag Attributes its values</a>
