--- a/BookMark_InternalRout/Restaurant.html
+++ b/BookMark_InternalRout/Restaurant.html
@@ -8,7 +8,7 @@
 <body>
     <center id="home">
         <h1>Bawarchi Restaurant</h1>
-        <img src="../Bawarchi_Res/Bawarchi.jpeg" width="100%" height="400">
+        <img src="../TotalTasks/Bawarchi.jpeg" width="100%" height="400">
     </center>
     <h2><u>Description</u>:<h3>Bawarchi is famous for its aromatic Hyderabadi mutton biryani and other meaty preparations. The restaurant's other delicacies include the boti kabab, chicken 65 and haryani kabab, as well as a range of spicy curries.</h3></h2>
     <h3>Know about Bawarchi:<a href="https://www.bawarchirestaurants.com/AboutUs" target="_blank">About Bawarchi</a></h3>
@@ -25,30 +25,30 @@
 <h2>Veg Starters</h2>
 <ul>
 <li>Paneer Tikka</li>
-<img src="../Bawarchi_Res/PaneerTikka.jpeg" height="200">
+<img src="../TotalTasks/PaneerTikka.jpeg" height="200">
 <li>Mixed Lollipop</li>
-<img src="../Bawarchi_Res/MixedLollipop.jpeg" height="200">
+<img src="../TotalTasks/MixedLollipop.jpeg" height="200">
 </ul>
 <h2>Non-Veg Starters</h2>
 <ul>
 <li>Chicken Tondoori</li>
-<img src="../Bawarchi_Res/ChickenTandoori.jpeg" height="200">
+<img src="../TotalTasks/ChickenTandoori.jpeg" height="200">
 <li>Grill Chicken</li>
-<img src="../Bawarchi_Res/GrillChicken.jpeg" height="200">
+<img src="../TotalTasks/GrillChicken.jpeg" height="200">
 </ul>
 <h2>Veg Biriyani's</h2>
 <ul>
 <li>Paneer Biriyani</li>
-<img src="../Bawarchi_Res/PaneerBiriyani.jpeg" height="200">
+<img src="../TotalTasks/PaneerBiriyani.jpeg" height="200">
 <li>Mushroom Biriyani</li>
-<img src="../Bawarchi_Res/Mushroom Biriyani.jpeg" height="200">
+<img src="../TotalTasks/Mushroom Biriyani.jpeg" height="200">
 </ul>
 <h2>Non-Veg Biriyani's</h2>
 <ul>
 <li>Chicken Biriyani</li>
-<img src="../Bawarchi_Res/ChickenBiriyani.jpeg" height="200">
+<img src="../TotalTasks/ChickenBiriyani.jpeg" height="200">
 <li>Mutton Biriyani</li>
-<img src="../Bawarchi_Res/MuttonBiriyani.jpeg" height="200">
+<img src="../TotalTasks/MuttonBiriyani.jpeg" height="200">
 </ul>
 </p>
 <p id="order">
