--- a/index.html
+++ b/index.html
@@ -12,33 +12,53 @@
         <h2>DAY:1-pre-Formatted_Tag</h2>
         </center>
         <a href="./Pre_Tag/Res1.html">Task1</a>
+        <br>
         <a href="./Pre_Tag/Res2.html">Task2</a>
+        <br>
         <a href="./Pre_Tag/Res3.html">Task3</a>
+        <br>
         <a href="./Pre_Tag/Res4.html">Task4</a>
+        <br>
         <a href="./Pre_Tag/Res5.html">Task5</a>
+        <br>
         <center><h2>DAY:2-Heading_paragraph_Anchor_Tags and Text_Formatting_Tags</h2></center>
         <a href="./Heading_pra_anchor_tags/Bike.html">Task1</a>
+        <br>
         <a href="./Heading_pra_anchor_tags/Instagram.html">Task2</a>
+        <br>
         <a href="./Heading_pra_anchor_tags/ipl.html">Task3</a>
+        <br>
         <a href="./Heading_pra_anchor_tags/kohli.html">Task4</a>
+        <br>
         <a href="./Heading_pra_anchor_tags/WhatsApp.html">Task5</a>
         <br>
         <br>
-        <h2>Text Formatting Tags</h2>
+        <h2>Day:2-Text Formatting Tags</h2>
+        <br>
         <a href="./Text_Formatting_Tags/Bangalore.html">Task1</a>
+        <br>
         <a href="./Text_Formatting_Tags/Chennai.html">Task2</a>
+        <br>
         <a href="./Text_Formatting_Tags/hyderabad.html">Task3</a>
+        <br>
         <a href="./Text_Formatting_Tags/Kolkata.html">Task4</a>
+        <br>
         <a href="./Text_Formatting_Tags/Mumbai.html">Task5</a>
+        <br>
         <center><h2>DAY:3-List_OrderAndUnOrder_Lists and Table_RowSpan_ColSpan</h2></center>
         <a href="./List_Order_UnOrder/orderList.html">Task1</a>
         <br>
         <br>
-        <h2>Table_RowSpan_ColSpan</h2>
+        <h2>Day:3-Table_RowSpan_ColSpan</h2>
+        <br>
         <a href="./Table/Grociers.html">Task1</a>
+        <br>
         <a href="./Table/TableForGroceries.html">Task2</a>
+        <br>
         <a href="./Table/Biriyani.html">Task3</a>
+        <br>
         <a href="./Table/productsTotal.html">Task4</a>
+        <br>
         <center><h2>DAY:4</h2></center>
         <a href="./TotalTasks/TotalTasks.html">Task1</a>
         <br>
