--- a/TotalTasks/Resume.html
+++ b/TotalTasks/Resume.html
@@ -14,7 +14,7 @@ padding:50px;
 <center>
 <h1>RESUME</h1>
 <h1>P.K.V.Sai Priyatham</h1>
-<img src="../FieldsetLegendTag/pspimage.jpeg" width="100" height="100">
+<img src="./pspimage.jpeg" width="100" height="100">
 </center>
 <hr>
 <u><h2>Career Objective:</h2></u>
@@ -76,6 +76,6 @@ good interpersonal and communication skills.
 <h3>Place:Hyderabad</h3>
 <h3>Date:26-03-2024</h3>
 <h3>Name:priyatham</h3>
-<h3>Signature:<img src="../FieldsetLegendTag/pspsignature.jpg" width="200" height="100"></h3>
+<h3>Signature:<img src="./pspsignature.jpg" width="200" height="100"></h3>
 </body>
 </html>
