--- a/index.html
+++ b/index.html
@@ -71,21 +71,27 @@
         <br>
         <a href="./BookMark_InternalRout/BookChapters.html">task3 </a>
         <br>
-        <center><h2>Day:6</h2></center>
-        <a href="./AnchorTag_Attributes">Day-6:Anchor Tag Attributes its values</a>
+        <center><h2>Day:6-Anchor Tag Attributes its values and iframe</h2></center>
+        <a href="./AnchorTag_Attributes/AttributesItsValues.html">Task1</a>
         <br>
         <br>
-        <a href="./Iframe/YoutubeGooglemap.html">Day-6:iframe</a>
-        <center><h2>Day:7</h2></center>
-       <a href="./FieldsetLegendTag/ResumeWithFL.html">Day-7:FieldsetLegend Tag</a>
+        <a href="./Iframe/YoutubeGooglemap.html">Task2</a>
+        <center><h2>Day:7-FieldsetLegend Tag and Multimedia Tags</h2></center>
+       <a href="./FieldsetLegendTag/ResumeWithFL.html">Task1</a>
        <br>
        <br>
-       <a href="./MultimediaTags">Day-7:Multimedia Tags</a>
+       <a href="./MultimediaTags/Audio.html">Task2</a>
        <br>
-       <center><h2>Day:8</h2></center>
-       <a href="./HtmlLayOut.html/Layout.html">Day-8:Html Layout Sematic Tags</a>
+       <a href="./MultimediaTags/Video.html">Task3</a>
        <br>
-        <center><h2>Day:9</h2></center>
-        <a href="./CopyDataInTable">Day-9:Table task</a>      
+       <a href="./MultimediaTags/image.html">Task4</a>
+       <br>
+       <center><h2>Day:8-Html Layout Sematic Tags</h2></center>
+       <a href="./HtmlLayOut.html/Layout.html">Day-8:</a>
+       <br>
+        <center><h2>Day:9-Copy Data in Table</h2></center>
+        <a href="./CopyDataInTable/Categorywithoutrowcol.html">Task1</a> 
+        <br>
+        <a href="./CopyDataInTable/CopyThedata.html">Task2</a>      
 </body>
 </html>
