--- a/MultimediaTags/image.html
+++ b/MultimediaTags/image.html
@@ -8,7 +8,7 @@
 <body>
     <center>
         <h1>Image Tag</h1>
-        <img src="../FieldsetLegendTag/pspimage.jpeg" width="500" height="500">
+        <img src="../TotalTasks/pspimage.jpeg" width="500" height="500">
     </center>
 </body>
 </html>
