--- a/TotalTasks/Bawarchi_Res.html
+++ b/TotalTasks/Bawarchi_Res.html
@@ -5,37 +5,37 @@
 <body>
 <center>
 <h1>BAWARCHI RESTAURANT</H1>
-<img src="./Bawarchi.jpeg" width="100%" heigth="100">
+<img src="../TotalTasks/Bawarchi.jpeg" width="100%" heigth="100">
 <h2>Menu:</h2>
 </center>
 <h3>Know about Bawarchi:<a href="https://www.bawarchirestaurants.com/AboutUs">About Bawarchi</a></h3>
 <h2>Veg Starters</h2>
 <ul>
 <li>Paneer Tikka</li>
-<img src="./PaneerTikka.jpeg" height="200">
+<img src="../TotalTasks/PaneerTikka.jpeg" height="200">
 <li>Mixed Lollipop</li>
-<img src="./MixedLollipop.jpeg" height="200">
+<img src="../TotalTasks/MixedLollipop.jpeg" height="200">
 </ul>
 <h2>Non-Veg Starters</h2>
 <ul>
 <li>Chicken Tondoori</li>
-<img src="./ChickenTandoori.jpeg" height="200">
+<img src="../TotalTasks/ChickenTandoori.jpeg" height="200">
 <li>Grill Chicken</li>
-<img src="./GrillChicken.jpeg" height="200">
+<img src="../TotalTasks/GrillChicken.jpeg" height="200">
 </ul>
 <h2>Veg Biriyani's</h2>
 <ul>
 <li>Paneer Biriyani</li>
-<img src="./PaneerBiriyani.jpeg" height="200">
+<img src="../TotalTasks/PaneerBiriyani.jpeg" height="200">
 <li>Mushroom Biriyani</li>
-<img src="./Mushroom Biriyani.jpeg" height="200">
+<img src="../TotalTasks/Mushroom Biriyani.jpeg" height="200">
 </ul>
 <h2>Non-Veg Biriyani's</h2>
 <ul>
 <li>Chicken Biriyani</li>
-<img src="./ChickenBiriyani.jpeg" height="200">
+<img src="../TotalTasks/ChickenBiriyani.jpeg" height="200">
 <li>Mutton Biriyani</li>
-<img src="./MuttonBiriyani.jpeg" height="200">
+<img src="../TotalTasks/MuttonBiriyani.jpeg" height="200">
 </ul>
 <h2>Recipe For Chicken Biriyani</h2>
 <a href="https://www.indianhealthyrecipes.com/chicken-biryani-recipe/">Chicken Biriyani Recipe</a>
