--- a/TotalTasks/TotalTasks.html
+++ b/TotalTasks/TotalTasks.html
@@ -7,11 +7,11 @@
 <h1>Total Tasks</h1>
 </center>
 <h2>Day 1 To Day 4 Tasks</h2>
-<a href="./Tasks_Of_Html.html" download="tasks">Day 1 To 4 Tasks
+<a href="./Tasks_Of_Html.html">Day 1 To 4 Tasks
 </a>
 <h2>Resume</h2>
-<a href="./Resume.html" download="resume">Resume</a>
+<a href="./Resume.html" >Resume</a>
 <h2>Bawarchi Restaurant</h2>
-<a href="./Bawarchi_Res.html" download="res">Bawarchi</a>
+<a href="./Bawarchi_Res.html" >Bawarchi</a>
 </body>
 </html>
